--- a/conf/vllm/mm-safety/llama3_text_test_v1_0.yaml
+++ b/conf/vllm/mm-safety/llama3_text_test_v1_0.yaml
@@ -10,7 +10,7 @@ hydra:
 data_dir: ../research.data/mm-safety/
 train_file:
 dev_file:
-test_file: ${data_dir}/FigStep/data/question/safebench.csv
+test_file: ${data_dir}/MM-SafetyBench/data/processed_questions
 
 port: 6000
 model: ds-coder-v1.5-chat
@@ -29,14 +29,15 @@ split_id: 0
 max_num_seqs: 256
 suffix: n${n}.tem${tem}
 
-output_file: outputs/mm-safety/fig-step/safebench.llama-3-8b-chat.${suffix}.json
+#output_file: outputs/mm-safety/vl-safe/vl-safe.${suffix}.rephrase-q-sd.json
+output_file: outputs/mm-safety/vl-safe/vl-safe.${suffix}.rephrase-q.json
 flush_file: ${output_file}l
 
 apply_chat_template: False
 add_generation_prompt: True
 
 
-prompt: "{question}"
+prompt: "{Rephrased Question}"
 chat_prefix: "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n\nYou are a helpful assistant to answer the questions from the user.<|eot_id|><|start_header_id|>user<|end_header_id|>\n\n"
 chat_suffix: "<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n\n"
 
@@ -44,10 +45,10 @@ chat_suffix: "<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n\n"
 read_tensor:
   _target_: dataset.combine_dataset.ResponseAlignDataset
   read_fn:
-    _target_: dataset.readers.SafeBenchCSVReader.return_cls
+    _target_: dataset.readers.json2list_reader
   template: ${chat_prefix}${prompt}${chat_suffix}
   instruction:
-  index_field: "task_id"
+  index_field: "id"
   service_based: False
   split_size: ${split_size}
   split_id: ${split_id}
@@ -72,7 +73,7 @@ post_process:
     _target_: post_processors.eval.keywords.KeyWordsEvaluator
   output_file: ${output_file}
   index_field: id
-  saved_keys: [ "dataset", "category_id", "task_id", "category_name", "question", "instruction" ]
+  saved_keys: [ "Question", "GPT-Pred", "Changed Question", "Key Phrase", "Phrase Type", "Rephrased Question", "Rephrased Question(SD)" ]
 
 # Training hyper-parameters
 per_gpu_train_batch_size: 1
