--- a/conf/vllm/vl_safe/llama3_text_test_v1_0.yaml
+++ b/conf/vllm/vl_safe/llama3_text_test_v1_0.yaml
@@ -10,7 +10,7 @@ hydra:
 data_dir: ../research.data/mm-safety/
 train_file:
 dev_file:
-test_file: ${data_dir}/FigStep/data/question/safebench.csv
+test_file: ${data_dir}/LVLM_NLF/VLSafe/harmlessness_examine.jsonl
 
 port: 6000
 model: ds-coder-v1.5-chat
@@ -29,7 +29,7 @@ split_id: 0
 max_num_seqs: 256
 suffix: n${n}.tem${tem}
 
-output_file: ../pretrained-models/Meta-Llama-3-8B-Instruct/mm-safety/vl-safe/vl-safe.${suffix}.json
+output_file: outputs/mm-safety/vl-safe/vl-safe.${suffix}.json
 flush_file: ${output_file}l
 
 apply_chat_template: False
@@ -44,10 +44,10 @@ chat_suffix: "<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n\n"
 read_tensor:
   _target_: dataset.combine_dataset.ResponseAlignDataset
   read_fn:
-    _target_: dataset.fig_step.SafeBenchCSVReader.return_cls
+    _target_: dataset.readers.jsonl_reader
   template: ${chat_prefix}${prompt}${chat_suffix}
   instruction:
-  index_field: "task_id"
+  index_field: "id"
   service_based: False
   split_size: ${split_size}
   split_id: ${split_id}
@@ -66,11 +66,13 @@ tp_size: 1
 pp_size: 1
 
 post_process:
-  _target_: post_processors.api_callback.SaveOnlyCallBack
+  _target_: post_processors.api_callback.SafetyResponseCallback
   answer_clean:
+  evaluator:
+    _target_: post_processors.eval.keywords.KeyWordsEvaluator
   output_file: ${output_file}
-  index_field: task_id
-  saved_keys: [ "dataset", "category_id", "task_id", "category_name", "question", "instruction" ]
+  index_field: id
+  saved_keys: [ "image_id", "caption", "query" ]
 
 # Training hyper-parameters
 per_gpu_train_batch_size: 1
