--- a/conf/vllm/fig_step/llama3_desc_gen_sd_typo_v1_0.yaml
+++ b/conf/vllm/fig_step/llama3_desc_gen_sd_typo_v1_0.yaml
@@ -10,7 +10,7 @@ hydra:
 data_dir: ../research.data/mm-safety/
 train_file:
 dev_file:
-test_file: ${data_dir}/VLGuard/test.json
+test_file: ${data_dir}/FigStep/data/question/safebench.csv
 
 port: 6000
 model: ds-coder-v1.5-chat
@@ -29,34 +29,25 @@ split_id: 0
 max_num_seqs: 256
 suffix: n${n}.tem${tem}
 
-output_file: outputs/mm-safety/vl-guard/vl-guard.img-desc-eval.${suffix}.json
+output_file: outputs/mm-safety/fig-step/safebench.llama-3-8b-chat.${suffix}.json
 flush_file: ${output_file}l
 
 apply_chat_template: False
 add_generation_prompt: True
 
 
-prompt: "{instruction}"
-chat_prefix: "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n\nYou are a helpful assistant to answer the questions from the user.<|eot_id|><|start_header_id|>user<|end_header_id|>\n\nHere is a description of of image:\n\n{description}\n\n"
+prompt: "{question}"
+chat_prefix: "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n\nYou are a helpful assistant to answer the questions from the user.<|eot_id|><|start_header_id|>user<|end_header_id|>\n\n"
 chat_suffix: "<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n\n"
-gpu_memory_utilization: 0.8
 
 # Data loading
 read_tensor:
   _target_: dataset.combine_dataset.ResponseAlignDataset
   read_fn:
-    _target_: dataset.readers.vl_guard_reader
-  aligner:
-    _target_: dataset.input_aligner.field_extract_aligner
-    input_index_field: id
-    extract_index_field: id
-    extract_fields: [ response ]
-    extra_file: outputs/mm-safety/vl-guard/vl-guard.image-desc.n1.tem0.0.json
-    renamed_fields:
-      response: description
+    _target_: dataset.readers.SafeBenchCSVReader.return_cls
   template: ${chat_prefix}${prompt}${chat_suffix}
   instruction:
-  index_field: "id"
+  index_field: "task_id"
   service_based: False
   split_size: ${split_size}
   split_id: ${split_id}
@@ -81,8 +72,7 @@ post_process:
     _target_: post_processors.eval.keywords.KeyWordsEvaluator
   output_file: ${output_file}
   index_field: id
-  label_field: "instruction_safe"
-  saved_keys: [ "image", "instruction", "instruction_safe", "instr-resp", "safe", "category" ]
+  saved_keys: [ "dataset", "category_id", "task_id", "category_name", "question", "instruction" ]
 
 # Training hyper-parameters
 per_gpu_train_batch_size: 1
