--- a/conf/vllm/mm-safety/llama3_text_test_system_prompt_v1_0.yaml
+++ b/conf/vllm/mm-safety/llama3_text_test_system_prompt_v1_0.yaml
@@ -10,7 +10,7 @@ hydra:
 data_dir: ../research.data/mm-safety/
 train_file:
 dev_file:
-test_file: ${data_dir}/VLGuard/test.json
+test_file: ${data_dir}/MM-SafetyBench/data/processed_questions
 
 port: 6000
 model: ds-coder-v1.5-chat
@@ -29,15 +29,15 @@ split_id: 0
 max_num_seqs: 256
 suffix: n${n}.tem${tem}
 
-output_file: outputs/mm-safety/vl-guard/vl-guard.img-desc-eval.${suffix}.json
+output_file: outputs/mm-safety/mm-safety-bench/mm-safety-bench.text-only.system-prompt.${suffix}.rephrase-q.json
 flush_file: ${output_file}l
 
 apply_chat_template: False
 add_generation_prompt: True
 
 
-prompt: "{instruction}"
-chat_prefix: "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n\nYou are a helpful assistant to answer the questions from the user.<|eot_id|><|start_header_id|>user<|end_header_id|>\n\nHere is a description of of image:\n\n{description}\n\n"
+prompt: "{Rephrased Question}"
+chat_prefix: "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n\nYou are a helpful assistant to answer the questions from the user.\n\n{system_prompt}<|eot_id|><|start_header_id|>user<|end_header_id|>\n\n"
 chat_suffix: "<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n\n"
 gpu_memory_utilization: 0.8
 
@@ -45,15 +45,8 @@ gpu_memory_utilization: 0.8
 read_tensor:
   _target_: dataset.combine_dataset.ResponseAlignDataset
   read_fn:
-    _target_: dataset.readers.vl_guard_reader
-  aligner:
-    _target_: dataset.input_aligner.field_extract_aligner
-    input_index_field: id
-    extract_index_field: id
-    extract_fields: [ response ]
-    extra_file: outputs/mm-safety/vl-guard/vl-guard.image-desc.n1.tem0.0.json
-    renamed_fields:
-      response: description
+    _target_: dataset.readers.json2list_reader
+    add_system_prompt: True
   template: ${chat_prefix}${prompt}${chat_suffix}
   instruction:
   index_field: "id"
@@ -81,8 +74,7 @@ post_process:
     _target_: post_processors.eval.keywords.KeyWordsEvaluator
   output_file: ${output_file}
   index_field: id
-  label_field: "instruction_safe"
-  saved_keys: [ "image", "instruction", "instruction_safe", "instr-resp", "safe", "category" ]
+  saved_keys: [ "Question", "GPT-Pred", "Changed Question", "Key Phrase", "Phrase Type", "Rephrased Question", "Rephrased Question(SD)", "category" ]
 
 # Training hyper-parameters
 per_gpu_train_batch_size: 1
