--- a/conf/vllm/vl_guard/llama3_text_test_v1_0.yaml
+++ b/conf/vllm/vl_guard/llama3_text_test_v1_0.yaml
@@ -29,7 +29,7 @@ split_id: 0
 max_num_seqs: 256
 suffix: n${n}.tem${tem}
 
-output_file: outputs/mm-safety/vl-guard/vl-guard.${suffix}.json
+output_file: outputs/mm-safety/vl-guard/vl-guard.text-only.${suffix}.json
 flush_file: ${output_file}l
 
 apply_chat_template: False
@@ -39,6 +39,7 @@ add_generation_prompt: True
 prompt: "{instruction}"
 chat_prefix: "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n\nYou are a helpful assistant to answer the questions from the user.<|eot_id|><|start_header_id|>user<|end_header_id|>\n\n"
 chat_suffix: "<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n\n"
+gpu_memory_utilization: 0.8
 
 # Data loading
 read_tensor:
@@ -73,7 +74,7 @@ post_process:
   output_file: ${output_file}
   index_field: id
   label_field: "instruction_safe"
-  saved_keys: [ "image", "instruction", "instruction_safe", "instr-resp", "safe" ]
+  saved_keys: [ "image", "instruction", "instruction_safe", "instr-resp", "safe", "category" ]
 
 # Training hyper-parameters
 per_gpu_train_batch_size: 1
