--- a/conf/vllm/fig_step/caption/qwen2_vl_caption_v1_0.yaml
+++ b/conf/vllm/fig_step/caption/qwen2_vl_caption_v1_0.yaml
@@ -48,6 +48,9 @@ read_tensor:
     _target_: dataset.readers.SafeBenchCSVReader.return_cls
     image_dir: ${data_dir}/FigStep/data/images/SafeBench
     image_name_template: "query_ForbidQI_{category_id}_{task_id}_6.png"
+  aligner:
+    _target_: dataset.input_aligner.key_based_filter_aligner
+    key: image
   template: ${chat_prefix}${chat_suffix}
   instruction:
   index_field: "id"
@@ -76,7 +79,7 @@ post_process:
     _target_: post_processors.eval.keywords.KeyWordsEvaluator
   output_file: ${output_file}
   index_field: id
-  saved_keys: [ "dataset", "category_id", "task_id", "category", "question", "instruction" ]
+  saved_keys: [ "dataset", "category_id", "task_id", "category", "question", "instruction", "image_path" ]
 
 # Training hyper-parameters
 per_gpu_train_batch_size: 1
