--- a/conf/vllm/fig_step/ocr/llava_v1.5_13b_ocr_v1_0.yaml
+++ b/conf/vllm/fig_step/ocr/llava_v1.5_13b_ocr_v1_0.yaml
@@ -10,7 +10,7 @@ hydra:
 data_dir: ../research.data/mm-safety/
 train_file:
 dev_file:
-test_file: ${data_dir}/MM-SafetyBench/data/processed_questions
+test_file: ${data_dir}/FigStep/data/question/safebench.csv
 
 port: 6000
 model: ds-coder-v1.5-chat
@@ -20,24 +20,24 @@ sampling_params:
   n: 1
   temperature: 0.0
   stop: [ "</s>", "\n\n\n\n", "Context:\n", "Thought 42:", "<|end_of_text|>", "<|eot_id|>", "<|EOT|>" ]
-  max_tokens: 8192
+  max_tokens: 4096
 
 tem: ${sampling_params.temperature}
 n: ${sampling_params.n}
 split_size: -1
 split_id: 0
-max_num_seqs: 32
-max_model_len: 8192
+max_num_seqs: 128
+max_model_len: 4096
 suffix: n${n}.tem${tem}
 
-output_file: outputs/llava-v1.6-mistral-7b-hf/mm-safety/mm-safety.caption.sd.v1.0.${suffix}.json
+output_file: outputs/llava-1.5-13b-hf/fig-step/fig-step.ocr.v1.0.${suffix}.json
 flush_file: ${output_file}l
 
 apply_chat_template: False
 add_generation_prompt: True
 
 
-chat_prefix: "[INST] <image>\nPlease describe the content of this image. [/INST]"
+chat_prefix: "USER: <image>\nPlease recognize the text in the image. ASSISTANT:"
 chat_suffix: ""
 gpu_memory_utilization: 0.9
 
@@ -45,11 +45,12 @@ gpu_memory_utilization: 0.9
 read_tensor:
   _target_: dataset.combine_dataset.ResponseAlignDataset
   read_fn:
-    _target_: dataset.readers.json2list_full_reader
-    image_dir: ${data_dir}/MM-SafetyBench/data/imgs/
+    _target_: dataset.readers.SafeBenchCSVReader.return_cls
+    image_dir: ${data_dir}/FigStep/data/images/SafeBench
+    image_name_template: "query_ForbidQI_{category_id}_{task_id}_6.png"
   aligner:
     _target_: dataset.input_aligner.key_based_filter_aligner
-    key: sd_image
+    key: image
   template: ${chat_prefix}${chat_suffix}
   instruction:
   index_field: "id"
@@ -57,11 +58,11 @@ read_tensor:
   split_size: ${split_size}
   split_id: ${split_id}
   max_data_num: -1
-  image_key: sd_image
+  image_key: image
 
 save_best: True
 eval_sub_path:
-output_dir: ../pretrained-models/llava-v1.6-mistral-7b-hf/
+output_dir: ../pretrained-models/llava-1.5-13b-hf/
 
 # Dataloader
 num_workers: 32
@@ -78,7 +79,7 @@ post_process:
     _target_: post_processors.eval.keywords.KeyWordsEvaluator
   output_file: ${output_file}
   index_field: id
-  saved_keys: [ "Question", "GPT-Pred", "Changed Question", "Key Phrase", "Phrase Type", "Rephrased Question", "Rephrased Question(SD)", "category", "image_path" ]
+  saved_keys: [ "dataset", "category_id", "task_id", "category", "question", "instruction", "image_path" ]
 
 # Training hyper-parameters
 per_gpu_train_batch_size: 1
