--- a/conf/vllm/llama3_guard/ocr_guard_judge_template_v1_0.yaml
+++ b/conf/vllm/llama3_guard/ocr_guard_judge_template_v1_0.yaml
@@ -10,7 +10,7 @@ hydra:
 data_dir: ../research.data/mm-safety/
 train_file:
 dev_file:
-test_file: ${data_dir}/MM-SafetyBench/data/processed_questions
+test_file:
 
 port: 6000
 model: ds-coder-v1.5-chat
@@ -20,48 +20,40 @@ sampling_params:
   n: 1
   temperature: 0.0
   stop: [ "</s>", "\n\n\n\n", "Context:\n", "Thought 42:", "<|end_of_text|>", "<|eot_id|>", "<|EOT|>" ]
-  max_tokens: 8192
+  max_tokens: 4096
 
 tem: ${sampling_params.temperature}
 n: ${sampling_params.n}
 split_size: -1
 split_id: 0
-max_num_seqs: 32
-max_model_len: 8192
+max_num_seqs: 128
 suffix: n${n}.tem${tem}
 
-output_file: outputs/llava-v1.6-mistral-7b-hf/mm-safety/mm-safety.caption.sd.v1.0.${suffix}.json
+output_file: ${test_file}.llama3-guard-8b.${suffix}.v1.0.json
 flush_file: ${output_file}l
 
-apply_chat_template: False
+apply_chat_template: True
 add_generation_prompt: True
 
-
-chat_prefix: "[INST] <image>\nPlease describe the content of this image. [/INST]"
-chat_suffix: ""
 gpu_memory_utilization: 0.9
+chat_prefix: "Please recognize the text in the image."
 
 # Data loading
 read_tensor:
   _target_: dataset.combine_dataset.ResponseAlignDataset
-  read_fn:
-    _target_: dataset.readers.json2list_full_reader
-    image_dir: ${data_dir}/MM-SafetyBench/data/imgs/
-  aligner:
-    _target_: dataset.input_aligner.key_based_filter_aligner
-    key: sd_image
-  template: ${chat_prefix}${chat_suffix}
+  template:
+    user: ${chat_prefix}
+    assistant: "{response}"
   instruction:
   index_field: "id"
   service_based: False
   split_size: ${split_size}
   split_id: ${split_id}
   max_data_num: -1
-  image_key: sd_image
 
 save_best: True
 eval_sub_path:
-output_dir: ../pretrained-models/llava-v1.6-mistral-7b-hf/
+output_dir: ../pretrained-models/Llama-Guard-3-8B
 
 # Dataloader
 num_workers: 32
@@ -75,10 +67,10 @@ post_process:
   _target_: post_processors.api_callback.SafetyResponseCallback
   answer_clean:
   evaluator:
-    _target_: post_processors.eval.keywords.KeyWordsEvaluator
+    _target_: post_processors.eval.keywords.GuardPredictor
   output_file: ${output_file}
   index_field: id
-  saved_keys: [ "Question", "GPT-Pred", "Changed Question", "Key Phrase", "Phrase Type", "Rephrased Question", "Rephrased Question(SD)", "category", "image_path" ]
+  saved_keys: [ "category" ]
 
 # Training hyper-parameters
 per_gpu_train_batch_size: 1
