--- a/conf/vllm/vl_guard/caption/internvl_8b_caption_v1_0.yaml
+++ b/conf/vllm/vl_guard/caption/internvl_8b_caption_v1_0.yaml
@@ -48,6 +48,9 @@ read_tensor:
   read_fn:
     _target_: dataset.readers.vl_guard_full_reader
     image_dir: ${data_dir}/VLGuard/test/
+  aligner:
+    _target_: dataset.input_aligner.key_based_filter_aligner
+    key: image
   template: ${chat_prefix}${chat_suffix}
   instruction:
   index_field: "id"
@@ -77,7 +80,7 @@ post_process:
   output_file: ${output_file}
   index_field: id
   label_field: "instruction_safe"
-  saved_keys: [ "image", "instruction", "instruction_safe", "instr-resp", "safe", "category" ]
+  saved_keys: [ "image", "instruction", "instruction_safe", "instr-resp", "safe", "category", "image_path" ]
 
 # Training hyper-parameters
 per_gpu_train_batch_size: 1
