--- a/conf/vllm/vl_safe/caption/llava_v1.5_7b_caption_v1_0.yaml
+++ b/conf/vllm/vl_safe/caption/llava_v1.5_7b_caption_v1_0.yaml
@@ -47,6 +47,9 @@ read_tensor:
   read_fn:
     _target_: dataset.readers.jsonl_reader
     image_dir: ${data_dir}/../train2017/train2017
+  aligner:
+    _target_: dataset.input_aligner.key_based_filter_aligner
+    key: image
   template: ${chat_prefix}${chat_suffix}
   instruction:
   index_field: "id"
@@ -75,7 +78,7 @@ post_process:
     _target_: post_processors.eval.keywords.KeyWordsEvaluator
   output_file: ${output_file}
   index_field: id
-  saved_keys: [ "image_id", "caption", "query" ]
+  saved_keys: [ "image_id", "caption", "query", "image_path" ]
 
 # Training hyper-parameters
 per_gpu_train_batch_size: 1
