--- a/conf/vllm/mm-safety/attack/sd_rq_sd/attack_guard_judge_template_v1_0.yaml
+++ b/conf/vllm/mm-safety/attack/sd_rq_sd/attack_guard_judge_template_v1_0.yaml
@@ -10,7 +10,7 @@ hydra:
 data_dir: ../research.data/mm-safety/
 train_file:
 dev_file:
-test_file: ${data_dir}/MM-SafetyBench/data/processed_questions
+test_file:
 
 port: 6000
 model: ds-coder-v1.5-chat
@@ -26,39 +26,33 @@ tem: ${sampling_params.temperature}
 n: ${sampling_params.n}
 split_size: -1
 split_id: 0
-max_num_seqs: 256
-max_model_len: 4096
+max_num_seqs: 128
 suffix: n${n}.tem${tem}
 
-output_file: outputs/llava-1.5-7b-hf/mm-safety/mm-safety.attack.sd.rq-sd.v1.0.${suffix}.json
+output_file: ${test_file}.llama3-guard-8b.${suffix}.v1.1.json
 flush_file: ${output_file}l
 
-apply_chat_template: False
+apply_chat_template: True
 add_generation_prompt: True
 
-
-chat_prefix: "USER: <image>\n{Rephrased Question(SD)} ASSISTANT:"
-chat_suffix: ""
-gpu_memory_utilization: 0.8
+gpu_memory_utilization: 0.9
 
 # Data loading
 read_tensor:
   _target_: dataset.combine_dataset.ResponseAlignDataset
-  read_fn:
-    _target_: dataset.readers.json2list_full_reader
-    image_dir: ${data_dir}/MM-SafetyBench/data/imgs/
-  template: ${chat_prefix}${chat_suffix}
+  template:
+    user: "{Rephrased Question(SD)}"
+    assistant: "{response}"
   instruction:
   index_field: "id"
   service_based: False
   split_size: ${split_size}
   split_id: ${split_id}
   max_data_num: -1
-  image_key: sd_image
 
 save_best: True
 eval_sub_path:
-output_dir: ../pretrained-models/llava-1.5-7b-hf/
+output_dir: ../pretrained-models/Llama-Guard-3-8B
 
 # Dataloader
 num_workers: 32
@@ -72,10 +66,10 @@ post_process:
   _target_: post_processors.api_callback.SafetyResponseCallback
   answer_clean:
   evaluator:
-    _target_: post_processors.eval.keywords.KeyWordsEvaluator
+    _target_: post_processors.eval.keywords.GuardPredictor
   output_file: ${output_file}
   index_field: id
-  saved_keys: [ "Question", "GPT-Pred", "Changed Question", "Key Phrase", "Phrase Type", "Rephrased Question", "Rephrased Question(SD)", "category" ]
+  saved_keys: [ "category" ]
 
 # Training hyper-parameters
 per_gpu_train_batch_size: 1
