--- a/conf/vllm/mm-safety/ocr/sd_typo/llava_v1.5_7b_ocr_v1_0.yaml
+++ b/conf/vllm/mm-safety/ocr/sd_typo/llava_v1.5_7b_ocr_v1_0.yaml
@@ -30,16 +30,16 @@ max_num_seqs: 256
 max_model_len: 4096
 suffix: n${n}.tem${tem}
 
-output_file: outputs/llava-1.5-7b-hf/mm-safety/mm-safety.attack.sd.rq-sd.v1.0.${suffix}.json
+output_file: outputs/llava-1.5-7b-hf/mm-safety/mm-safety.ocr.sd_typo.v1.0.${suffix}.json
 flush_file: ${output_file}l
 
 apply_chat_template: False
 add_generation_prompt: True
 
 
-chat_prefix: "USER: <image>\n{Rephrased Question(SD)} ASSISTANT:"
+chat_prefix: "USER: <image>\nPlease recognize the text in the image. ASSISTANT:"
 chat_suffix: ""
-gpu_memory_utilization: 0.8
+gpu_memory_utilization: 0.9
 
 # Data loading
 read_tensor:
@@ -47,6 +47,9 @@ read_tensor:
   read_fn:
     _target_: dataset.readers.json2list_full_reader
     image_dir: ${data_dir}/MM-SafetyBench/data/imgs/
+  aligner:
+    _target_: dataset.input_aligner.key_based_filter_aligner
+    key: sd_typo_image
   template: ${chat_prefix}${chat_suffix}
   instruction:
   index_field: "id"
@@ -54,7 +57,7 @@ read_tensor:
   split_size: ${split_size}
   split_id: ${split_id}
   max_data_num: -1
-  image_key: sd_image
+  image_key: sd_typo_image
 
 save_best: True
 eval_sub_path:
@@ -75,7 +78,7 @@ post_process:
     _target_: post_processors.eval.keywords.KeyWordsEvaluator
   output_file: ${output_file}
   index_field: id
-  saved_keys: [ "Question", "GPT-Pred", "Changed Question", "Key Phrase", "Phrase Type", "Rephrased Question", "Rephrased Question(SD)", "category" ]
+  saved_keys: [ "Question", "GPT-Pred", "Changed Question", "Key Phrase", "Phrase Type", "Rephrased Question", "Rephrased Question(SD)", "category", "image_path" ]
 
 # Training hyper-parameters
 per_gpu_train_batch_size: 1
