--- a/conf/vllm/mmbench/attack/internvl_8b_attack_v1_0.yaml
+++ b/conf/vllm/mmbench/attack/internvl_8b_attack_v1_0.yaml
@@ -7,10 +7,10 @@ hydra:
     - file://conf/
 
 
-data_dir: ../research.data/mm-safety/
+data_dir:
 train_file:
 dev_file:
-test_file: ${data_dir}/MM-SafetyBench/data/processed_questions
+test_file: ../research.data/mmbench_dev_20230712.tsv
 
 port: 6000
 model: ds-coder-v1.5-chat
@@ -19,7 +19,7 @@ sampling_params:
   _target_: vllm.SamplingParams
   n: 1
   temperature: 0.0
-  stop: [ "</s>", "\n\n\n\n", "Context:\n", "Thought 42:", "<|end_of_text|>", "<|eot_id|>", "<|EOT|>" ]
+  stop: [ "</s>", "\n\n\n\n", "Context:\n", "Thought 42:", "<|end_of_text|>", "<|eot_id|>", "<|EOT|>", "<|im_start|>", "<|im_end|>" ]
   max_tokens: 4096
 
 tem: ${sampling_params.temperature}
@@ -30,35 +30,38 @@ max_num_seqs: 256
 max_model_len: 4096
 suffix: n${n}.tem${tem}
 
-output_file: outputs/llava-1.5-7b-hf/mm-safety/mm-safety.attack.sd.rq-sd.v1.0.${suffix}.json
+output_file: outputs/InternVL2-8B/mmbench/mmbench.attack.full.v1.0.${suffix}.json
 flush_file: ${output_file}l
 
 apply_chat_template: False
 add_generation_prompt: True
 
-
-chat_prefix: "USER: <image>\n{Rephrased Question(SD)} ASSISTANT:"
-chat_suffix: ""
+# Currently there is a bug for InternVL2: https://github.com/vllm-project/vllm/pull/7164
+# I need to wait for the new release.
+chat_prefix: "<|im_start|>user\n<image>\n{prompt}<|im_end|>"
+chat_suffix: "<|im_start|>assistant\n"
 gpu_memory_utilization: 0.8
+
 
 # Data loading
 read_tensor:
   _target_: dataset.combine_dataset.ResponseAlignDataset
   read_fn:
-    _target_: dataset.readers.json2list_full_reader
-    image_dir: ${data_dir}/MM-SafetyBench/data/imgs/
+    _target_: dataset.readers.mmbench_reader
   template: ${chat_prefix}${chat_suffix}
   instruction:
-  index_field: "id"
+  index_field: "index"
   service_based: False
   split_size: ${split_size}
   split_id: ${split_id}
   max_data_num: -1
-  image_key: sd_image
+  image_key: image
+  image_load_fn:
+    _target_: dataset.readers.get_fn_load_image_from_base64
 
 save_best: True
 eval_sub_path:
-output_dir: ../pretrained-models/llava-1.5-7b-hf/
+output_dir: ../pretrained-models/InternVL2-8B/
 
 # Dataloader
 num_workers: 32
@@ -74,8 +77,8 @@ post_process:
   evaluator:
     _target_: post_processors.eval.keywords.KeyWordsEvaluator
   output_file: ${output_file}
-  index_field: id
-  saved_keys: [ "Question", "GPT-Pred", "Changed Question", "Key Phrase", "Phrase Type", "Rephrased Question", "Rephrased Question(SD)", "category" ]
+  index_field: index
+  saved_keys: [ "source", "category", "l2-category", "answer", "question", "hint", "A", "B", "C", "D" ]
 
 # Training hyper-parameters
 per_gpu_train_batch_size: 1
