--- a/conf/vllm/mmbench/attack/llava_v1.5_7b_attack_v1_0.yaml
+++ b/conf/vllm/mmbench/attack/llava_v1.5_7b_attack_v1_0.yaml
@@ -7,10 +7,12 @@ hydra:
     - file://conf/
 
 
-data_dir: ../research.data/mm-safety/
+data_dir:
 train_file:
 dev_file:
-test_file: ${data_dir}/MM-SafetyBench/data/processed_questions
+test_file: ../research.data/mmbench_dev_20230712.tsv
+#test_file: ../research.data/MMBench_TEST_EN.tsv
+#test_file: ../research.data/MMBench_TEST_EN_legacy.tsv
 
 port: 6000
 model: ds-coder-v1.5-chat
@@ -30,14 +32,15 @@ max_num_seqs: 256
 max_model_len: 4096
 suffix: n${n}.tem${tem}
 
-output_file: outputs/llava-1.5-7b-hf/mm-safety/mm-safety.attack.sd.rq-sd.v1.0.${suffix}.json
+output_file: outputs/llava-1.5-7b-hf/mmbench/mmbench.attack.full.v1.0.${suffix}.json
+#output_file: outputs/llava-1.5-7b-hf/mmbench/mmbench.test.en.legacy.attack.full.v1.0.${suffix}.json
 flush_file: ${output_file}l
 
 apply_chat_template: False
 add_generation_prompt: True
 
 
-chat_prefix: "USER: <image>\n{Rephrased Question(SD)} ASSISTANT:"
+chat_prefix: "USER: <image>\n{prompt} ASSISTANT:"
 chat_suffix: ""
 gpu_memory_utilization: 0.8
 
@@ -45,16 +48,17 @@ gpu_memory_utilization: 0.8
 read_tensor:
   _target_: dataset.combine_dataset.ResponseAlignDataset
   read_fn:
-    _target_: dataset.readers.json2list_full_reader
-    image_dir: ${data_dir}/MM-SafetyBench/data/imgs/
+    _target_: dataset.readers.mmbench_reader
   template: ${chat_prefix}${chat_suffix}
   instruction:
-  index_field: "id"
+  index_field: "index"
   service_based: False
   split_size: ${split_size}
   split_id: ${split_id}
   max_data_num: -1
-  image_key: sd_image
+  image_key: image
+  image_load_fn:
+    _target_: dataset.readers.get_fn_load_image_from_base64
 
 save_best: True
 eval_sub_path:
@@ -74,8 +78,8 @@ post_process:
   evaluator:
     _target_: post_processors.eval.keywords.KeyWordsEvaluator
   output_file: ${output_file}
-  index_field: id
-  saved_keys: [ "Question", "GPT-Pred", "Changed Question", "Key Phrase", "Phrase Type", "Rephrased Question", "Rephrased Question(SD)", "category" ]
+  index_field: index
+  saved_keys: [ "source", "category", "l2-category", "answer", "question", "hint", "A", "B", "C", "D" ]
 
 # Training hyper-parameters
 per_gpu_train_batch_size: 1
