--- a/conf/vllm/seed_bench/attack/llava_v1.5_7b_attack_v1_0.yaml
+++ b/conf/vllm/seed_bench/attack/llava_v1.5_7b_attack_v1_0.yaml
@@ -7,10 +7,10 @@ hydra:
     - file://conf/
 
 
-data_dir: ../research.data/mm-safety/
+data_dir:
 train_file:
 dev_file:
-test_file: ${data_dir}/MM-SafetyBench/data/processed_questions
+test_file: ../research.data/SEED-Bench-2/SEED-Bench_v2_level1_2_3.json
 
 port: 6000
 model: ds-coder-v1.5-chat
@@ -30,14 +30,14 @@ max_num_seqs: 256
 max_model_len: 4096
 suffix: n${n}.tem${tem}
 
-output_file: outputs/llava-1.5-7b-hf/mm-safety/mm-safety.attack.sd.rq-sd.v1.0.${suffix}.json
+output_file: outputs/llava-1.5-7b-hf/seed-bench/seed-bench.single-image.attack.full.v1.0.${suffix}.json
 flush_file: ${output_file}l
 
 apply_chat_template: False
 add_generation_prompt: True
 
 
-chat_prefix: "USER: <image>\n{Rephrased Question(SD)} ASSISTANT:"
+chat_prefix: "USER: <image>\n{question} ASSISTANT:"
 chat_suffix: ""
 gpu_memory_utilization: 0.8
 
@@ -45,16 +45,16 @@ gpu_memory_utilization: 0.8
 read_tensor:
   _target_: dataset.combine_dataset.ResponseAlignDataset
   read_fn:
-    _target_: dataset.readers.json2list_full_reader
-    image_dir: ${data_dir}/MM-SafetyBench/data/imgs/
+    _target_: dataset.readers.seed_bench_image_reader
+    image_dir: ../research.data/SEED-Bench-2/cc3m-image
   template: ${chat_prefix}${chat_suffix}
   instruction:
-  index_field: "id"
+  index_field: "data_id"
   service_based: False
   split_size: ${split_size}
   split_id: ${split_id}
   max_data_num: -1
-  image_key: sd_image
+  image_key: image
 
 save_best: True
 eval_sub_path:
@@ -74,8 +74,8 @@ post_process:
   evaluator:
     _target_: post_processors.eval.keywords.KeyWordsEvaluator
   output_file: ${output_file}
-  index_field: id
-  saved_keys: [ "Question", "GPT-Pred", "Changed Question", "Key Phrase", "Phrase Type", "Rephrased Question", "Rephrased Question(SD)", "category" ]
+  index_field: data_id
+  saved_keys: [ "answer", "question", "choice_a", "choice_b", "choice_c", "choice_d", "question_id", "question_type_id" ]
 
 # Training hyper-parameters
 per_gpu_train_batch_size: 1
