--- a/conf/vllm/vl_guard/caption/internvl_8b_system_prompt_caption_v1_0.yaml
+++ b/conf/vllm/vl_guard/caption/internvl_8b_system_prompt_caption_v1_0.yaml
@@ -30,17 +30,21 @@ max_num_seqs: 256
 max_model_len: 4096
 suffix: n${n}.tem${tem}
 
-output_file: outputs/InternVL2-8B/vl-guard/vl-guard.caption.v1.0.${suffix}.json
+output_file: outputs/InternVL2-8B/vl-guard/vl-guard.system_prompt.caption.v1.0.${suffix}.json
 flush_file: ${output_file}l
 
 apply_chat_template: False
 add_generation_prompt: True
 
+system_prompt:
+  _target_: dataset.input_utils.read_text
+  file_path: prompts/adashield-static-defense-prompt.txt
+
 # Currently there is a bug for InternVL2: https://github.com/vllm-project/vllm/pull/7164
 # I need to wait for the new release.
 chat_prefix: "<|im_start|>user\n<image>\nPlease describe the content of this image.<|im_end|>"
 chat_suffix: "<|im_start|>assistant\n"
-gpu_memory_utilization: 0.8
+gpu_memory_utilization: 0.9
 
 # Data loading
 read_tensor:
@@ -51,7 +55,13 @@ read_tensor:
   aligner:
     _target_: dataset.input_aligner.key_based_filter_aligner
     key: image
-  template: ${chat_prefix}${chat_suffix}
+  template:
+    _target_: dataset.input_utils.compose_template
+    units:
+      system_prompt: ${system_prompt}
+      chat_prefix: "<|im_start|>user\n"
+      chat_suffix: "\n\n<image>\nPlease describe the content of this image.<|im_end|><|im_start|>assistant\n"
+    composition: "{chat_prefix}{system_prompt}{chat_suffix}"
   instruction:
   index_field: "id"
   service_based: False
