--- a/conf/vllm/vl_guard/caption/next_llama3_8b_caption_v1_0.yaml
+++ b/conf/vllm/vl_guard/caption/next_llama3_8b_caption_v1_0.yaml
@@ -77,7 +77,7 @@ post_process:
     _target_: post_processors.eval.keywords.KeyWordsEvaluator
   output_file: ${output_file}
   index_field: id
-  label_field: "instruction_safe"
+  label_field:
   saved_keys: [ "image", "instruction", "instruction_safe", "instr-resp", "safe", "category", "image_path" ]
 
 # Training hyper-parameters
