--- a/conf/vllm/vl_guard/llava/internvl_8b_system_prompt_attack_v1_1.yaml
+++ b/conf/vllm/vl_guard/llava/internvl_8b_system_prompt_attack_v1_1.yaml
@@ -27,20 +27,22 @@ n: ${sampling_params.n}
 split_size: -1
 split_id: 0
 max_num_seqs: 256
-max_model_len: 4096
 suffix: n${n}.tem${tem}
 
-output_file: outputs/InternVL2-8B/vl-guard/vl-guard.caption.v1.0.${suffix}.json
+output_file: outputs/InternVL2-8B/vl-guard/vl-guard.attack.system_prompt.v1.1.${suffix}.json
 flush_file: ${output_file}l
 
 apply_chat_template: False
 add_generation_prompt: True
 
+system_prompt:
+  _target_: dataset.input_utils.read_text
+  file_path: prompts/adashield-static-defense-prompt.txt
+
 # Currently there is a bug for InternVL2: https://github.com/vllm-project/vllm/pull/7164
 # I need to wait for the new release.
-chat_prefix: "<|im_start|>user\n<image>\nPlease describe the content of this image.<|im_end|>"
+chat_prefix: "<|im_start|>user\n<image>\n{instruction}<|im_end|>"
 chat_suffix: "<|im_start|>assistant\n"
-gpu_memory_utilization: 0.8
 
 # Data loading
 read_tensor:
@@ -48,10 +50,14 @@ read_tensor:
   read_fn:
     _target_: dataset.readers.vl_guard_full_reader
     image_dir: ${data_dir}/VLGuard/test/
-  aligner:
-    _target_: dataset.input_aligner.key_based_filter_aligner
-    key: image
-  template: ${chat_prefix}${chat_suffix}
+  template:
+    _target_: dataset.input_utils.compose_template
+    units:
+      system_prompt: ${system_prompt}
+      chat_prefix: "<|im_start|>user\n"
+      chat_medium: "\n\n<image>\n{instruction}<|im_end|>"
+      chat_suffix: ${chat_suffix}
+    composition: "{chat_prefix}{system_prompt}{chat_medium}{chat_suffix}"
   instruction:
   index_field: "id"
   service_based: False
@@ -79,8 +85,8 @@ post_process:
     _target_: post_processors.eval.keywords.KeyWordsEvaluator
   output_file: ${output_file}
   index_field: id
-  label_field:
-  saved_keys: [ "image", "instruction", "instruction_safe", "instr-resp", "safe", "category", "image_path" ]
+  label_field: "instruction_safe"
+  saved_keys: [ "image", "instruction", "instruction_safe", "instr-resp", "safe", "category" ]
 
 # Training hyper-parameters
 per_gpu_train_batch_size: 1
